Update for horizontal scroll bug

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -37,7 +37,7 @@
 	padding: 80px 20px 0;
 	background: #79896D;
 	color: #9caa92;
-	margin: 0 -20px 0;
+	margin: 0;
 	border-bottom: 1px solid #000;
 	box-shadow: rgba(0, 0, 0, 0.0976563) 0px -1px 0px 0px inset, rgba(0, 0, 0, 0.0976563) 0px 1px 10px 0px;
 }
